fixed overlaping cta button

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -22,6 +22,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   height: 10rem;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 5rem;
@@ -68,7 +69,9 @@ a::after {
   cursor: pointer;
   max-height: 6rem;
 }
-
+.site-navigation {
+  overflow-y: hidden;
+}
 .site-navigation ul {
   display: flex;
   justify-content: space-around;
@@ -162,7 +165,7 @@ a::after {
   letter-spacing: 0.5rem;
   font-weight: 700;
   outline: none;
-  position: relative;
+  /* position: relative; */
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
@@ -303,11 +306,8 @@ a::after {
   }
   .site-navigation {
     overflow-x: hidden;
-    overflow-y: hidden;
   }
   .menu {
-    /* overflow-x: hidden; */
-
     position: absolute;
     right: 0px;
     height: 50vh;
